kubernetes/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: redis-example
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: web
      targetPort: web
      port: 80
