kubernetes/backend/ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend
  namespace: redis-example
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.redis-example.zat.ong`)
      kind: Rule
      services:
        - name: backend
          port: web
  tls:
    certResolver: letsencrypt-production
